ENH: WIP for table creation

--- a/Code/GISFilters/CMakeLists.txt
+++ b/Code/GISFilters/CMakeLists.txt
@@ -3,9 +3,8 @@
 FILE(GLOB OTBGISFilters_SRCS "*.cxx" )
 
 
-
 ADD_LIBRARY(OTBGISFilters ${OTBGISFilters_SRCS})
-TARGET_LINK_LIBRARIES (OTBGISFilters OTBCommon)
+TARGET_LINK_LIBRARIES (OTBGISFilters OTBCommon pq pqxx)
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBGISFilters PROPERTIES ${OTB_LIBRARY_PROPERTIES})
 ENDIF(OTB_LIBRARY_PROPERTIES)
