--- a/Testing/Code/GISFilters/CMakeLists.txt
+++ b/Testing/Code/GISFilters/CMakeLists.txt
@@ -47,6 +47,6 @@ INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
 # ${TIFF_LIBRARY}
 
 ADD_EXECUTABLE(otbGISFiltersTests otbGISFiltersTests.cxx ${GISFilters_SRCS})
-TARGET_LINK_LIBRARIES(otbGISFiltersTests OTBCommon OTBGISFilters OTBIO)
+TARGET_LINK_LIBRARIES(otbGISFiltersTests OTBGISFilters OTBIO OTBCommon pq pqxx)
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
