TEST: moving TestingHelper to a separate library

--- a/Examples/ChangeDetection/CMakeLists.txt
+++ b/Examples/ChangeDetection/CMakeLists.txt
@@ -123,6 +123,7 @@ ADD_TEST(KullbackLeiblerProfileChDetTest ${EXE_TESTS}
 	5 51 1 12 24
 )
 
+INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 ADD_EXECUTABLE(otbChangeDetectionExamplesTests otbChangeDetectionExamplesTests.cxx)
 TARGET_LINK_LIBRARIES(otbChangeDetectionExamplesTests  ITKAlgorithms ITKStatistics OTBBasicFilters OTBCommon OTBDisparityMap OTBIO OTBSpatialReasoning OTBChangeDetection OTBFeatureExtraction  OTBLearning  OTBMultiScale OTBTesting)
 
