--- a/Examples/SARPolarimetry/CMakeLists.txt
+++ b/Examples/SARPolarimetry/CMakeLists.txt
@@ -34,7 +34,7 @@ ADD_TEST(rdTvPiOver4ExamplePolarimetricSynthesisFilterTest ${SARPOLARIMETRY_TEST
         ${TEMP}/resPiOver4PolarimetricSynthesis.tif
 	)
 
-
+INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 ADD_EXECUTABLE(otbSARPolarimetryExamplesTests otbSARPolarimetryExamplesTests.cxx )
 TARGET_LINK_LIBRARIES(otbSARPolarimetryExamplesTests OTBSARPolarimetry OTBCommon OTBIO  ITKBasicFilters OTBTesting)
 
