--- a/Testing/Fa/CMakeLists.txt
+++ b/Testing/Fa/CMakeLists.txt
@@ -224,6 +224,7 @@ ADD_TEST(FA-0000041-mean_shift2 ${CXX_TEST_PATH}/0000041-mean_shift
 # 	-out ${TEMP}/objtest2-result.tif
 # 	)
 
+INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 
 ADD_EXECUTABLE(AlignementsQB  AlignementsQB.cxx)
 TARGET_LINK_LIBRARIES(AlignementsQB OTBFeatureExtraction OTBIO OTBCommon)
@@ -239,7 +240,5 @@ TARGET_LINK_LIBRARIES(0000041-mean_shift OTBIO OTBCommon OTBBasicFilters)
 
 ADD_EXECUTABLE(PolygonsVectorization PolygonsVectorization.cxx)
 TARGET_LINK_LIBRARIES(PolygonsVectorization OTBIO OTBCommon)
-
-INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
