--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -1693,7 +1693,7 @@ otbChangeLabelImageFilterNew.cxx
 otbChangeLabelImageFilter.cxx
 )
 
-INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
+INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 
 ADD_EXECUTABLE(otbBasicFiltersTests1 otbBasicFiltersTests1.cxx ${BasicFilters_SRCS1})
 TARGET_LINK_LIBRARIES(otbBasicFiltersTests1  OTBBasicFilters OTBIO OTBTesting)
