--- a/Testing/Code/Gui/CMakeLists.txt
+++ b/Testing/Code/Gui/CMakeLists.txt
@@ -37,7 +37,7 @@ otbFltkFilterWatcher.cxx
 otbFltkWriterWatcher.cxx
 )
 
-INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
+INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 
 # ${TIFF_LIBRARY}
 
