--- a/Testing/Code/Visualization/CMakeLists.txt
+++ b/Testing/Code/Visualization/CMakeLists.txt
@@ -352,6 +352,8 @@ otbPackedWidgetManagerNew.cxx
 otbSplittedWidgetManagerNew.cxx
 )
 
+INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
+
 # Building testing executables
 ADD_EXECUTABLE(otbVisualizationTests1 otbVisualizationTests1.cxx ${Visualization_SRCS1})
 TARGET_LINK_LIBRARIES(otbVisualizationTests1 OTBVisualization OTBIO OTBTesting)
