--- a/Examples/IO/CMakeLists.txt
+++ b/Examples/IO/CMakeLists.txt
@@ -135,7 +135,7 @@ SET(HIGHTOL 5000.0)
 
 # ------- ExtractROITest----------
 
-ADD_TEST(ExtractROITest ${EXE_TESTS1}
+ADD_TEST(ioTeExtractROITest ${EXE_TESTS1}
 	--compare-n-images ${TOL} 2
 	${BASELINE}/ROI_IMAGERY_RGB.png
 	${TEMP}/ROI_IMAGERY_RGB.png
@@ -149,7 +149,7 @@ ADD_TEST(ExtractROITest ${EXE_TESTS1}
     0 0 100 100
 )
 
-ADD_TEST(DEMToImageGeneratorTest ${EXE_TESTS1}
+ADD_TEST(ioTeDEMToImageGeneratorTest ${EXE_TESTS1}
 --compare-image ${TOL}  ${BASELINE}/DEMToImageGenerator.tif
                         ${TEMP}/DEMToImageGenerator.tif
         DEMToImageGeneratorTest
@@ -166,7 +166,7 @@ ADD_TEST(DEMToImageGeneratorTest ${EXE_TESTS1}
 
 IF(OTB_USE_LIBLAS)
 IF(ITK_USE_REVIEW)
-ADD_TEST(LidarToImageExampleTest ${EXE_TESTS1}
+ADD_TEST(ioTeLidarToImageExampleTest ${EXE_TESTS1}
 --compare-image ${TOL}  ${BASELINE}/lidar-image-4.hdr
                         ${TEMP}/lidar-image-4.hdr
          LidarToImageExampleTest
@@ -177,7 +177,7 @@ ADD_TEST(LidarToImageExampleTest ${EXE_TESTS1}
          5
          4
          )
-ADD_TEST(LidarToImageExample2Test ${EXE_TESTS1}
+ADD_TEST(ioTeLidarToImageExample2Test ${EXE_TESTS1}
 --compare-image ${TOL}  ${BASELINE}/lidar-image-8.hdr
                         ${TEMP}/lidar-image-8.hdr
          LidarToImageExampleTest
@@ -192,7 +192,7 @@ ENDIF(ITK_USE_REVIEW)
 ENDIF(OTB_USE_LIBLAS)
 
 IF( OTB_USE_CURL )
-ADD_TEST(TileMapImageIOExampleTest ${EXE_TESTS2}
+ADD_TEST(ioTeTileMapImageIOExampleTest ${EXE_TESTS2}
 --compare-image ${HIGHTOL}  ${BASELINE}/openStreetMap.png
                         ${TEMP}/openStreetMap.png
          TileMapImageIOExampleTest
