STYLE: GISFilters renamed to GeospatialAnalysis

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -20,5 +20,5 @@ IF(OTB_USE_VISU_GUI)
 ENDIF(OTB_USE_VISU_GUI)
 
 IF(OTB_USE_PQXX)
-        SUBDIRS(GISFilters)
+        SUBDIRS(GeospatialAnalysis)
 ENDIF(OTB_USE_PQXX)
