--- a/Code/GeospatialAnalysis/CMakeLists.txt
+++ b/Code/GeospatialAnalysis/CMakeLists.txt
@@ -1,16 +1,16 @@
 # Sources of non-templated classes.
 
-FILE(GLOB OTBGISFilters_SRCS "*.cxx" )
+FILE(GLOB OTBGeospatialAnalysis_SRCS "*.cxx" )
 
 
-ADD_LIBRARY(OTBGISFilters ${OTBGISFilters_SRCS})
-TARGET_LINK_LIBRARIES (OTBGISFilters OTBCommon pq pqxx)
+ADD_LIBRARY(OTBGeospatialAnalysis ${OTBGeospatialAnalysis_SRCS})
+TARGET_LINK_LIBRARIES (OTBGeospatialAnalysis OTBCommon pq pqxx)
 IF(OTB_LIBRARY_PROPERTIES)
-  SET_TARGET_PROPERTIES(OTBGISFilters PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+  SET_TARGET_PROPERTIES(OTBGeospatialAnalysis PROPERTIES ${OTB_LIBRARY_PROPERTIES})
 ENDIF(OTB_LIBRARY_PROPERTIES)
 
 IF(NOT OTB_INSTALL_NO_LIBRARIES)
-  INSTALL(TARGETS OTBGISFilters
+  INSTALL(TARGETS OTBGeospatialAnalysis
     RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
     LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
