ENH : add ignore line in CMakeLists that contains the file path

--- a/Testing/Code/Projections/CMakeLists.txt
+++ b/Testing/Code/Projections/CMakeLists.txt
@@ -98,6 +98,7 @@ ADD_TEST(prTvSensorModelSpot5 ${PROJECTIONS_TESTS1}
   --compare-ascii ${NOTOL}
          ${BASELINE_FILES}/prTvSensorModelSpot5.txt
          ${TEMP}/prTvSensorModelSpot5.txt
+--ignore-lines-with 1 support_data.metadata_file
     otbSensorModel
          ${LARGEINPUT}/SPOT5_SCENE01/IMAGERY.TIF
          ${TEMP}/prTvSensorModelSpot5.txt
