--- a/Examples/OBIA/CMakeLists.txt
+++ b/Examples/OBIA/CMakeLists.txt
@@ -4,6 +4,9 @@ INCLUDE_REGULAR_EXPRESSION("^.*$")
 ADD_EXECUTABLE(ImageToLabelToImage ImageToLabelToImage.cxx )
 TARGET_LINK_LIBRARIES(ImageToLabelToImage OTBCommon OTBIO ${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES})
 
+ADD_EXECUTABLE(ShapeAttributeComputation ShapeAttributeComputation.cxx )
+TARGET_LINK_LIBRARIES(ShapeAttributeComputation OTBCommon OTBIO ${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES})
+
 
 IF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
 
@@ -32,6 +35,15 @@ ADD_TEST( trTeOBIAImageToLabelToImageTest ${EXE_TESTS}
 	1 1108 0
         )
 
+ADD_TEST(trTeOBIAShapeAttributeComputation ${EXE_TESTS}
+	--compare-ascii ${EPS}
+	${BASELINE}/OBIAShapeAttribute.txt
+	${TEMP}/OBIAShapeAttribute.txt
+	ShapeAttributeComputationTest
+	${INPUTDATA}/MSLabeledOutput.tif
+	${TEMP}/OBIAShapeAttribute.txt
+)
+      
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
 ADD_EXECUTABLE(otbOBIAExamplesTests otbOBIAExamplesTests.cxx)
 TARGET_LINK_LIBRARIES(otbOBIAExamplesTests  ITKAlgorithms ITKStatistics ITKNumerics OTBBasicFilters OTBCommon OTBDisparityMap OTBIO OTBSpatialReasoning OTBChangeDetection OTBFeatureExtraction  OTBLearning  OTBMultiScale OTBFusion OTBTesting)
